Refactor tests to replace `isLiked` with `getLiked` in `CommentControllerTest` and `PostControllerTest`.